Fix problems with code readability
- specify units in @oneline
- delete margins not needed
- move width=0 of first divider to general flipclock styling

--- a/css/style.less
+++ b/css/style.less
@@ -899,23 +899,20 @@ ul.recent-supporters {
 
 .flipclock7 {
   .flip-clock-wrapper {
+    width: inherit;
     margin-top: @oneline*2;
     margin-bottom: @oneline;
     ul {
-      font-size: 2.2rem;
-      line-height: 1.6;
-      margin-top: 0.1193em;
-      margin-bottom: 0.1193em;
+      font-size: @oneline*1.5;
+      height: @oneline*1.75;
+      /* the line-height defines the position of the numbers within the rectangle flip */
       li {
-        line-height: inherit;
+        line-height: @oneline*2;
       }
     }
   }
   .flip-clock-divider {
-    height: @oneline*2;
-    &:first-child {
-      width: 0;
-    }
+    height: @oneline*1.75;
   }
 }
 
